[dev] add material icons

--- a/src/styles/comonents/pickhelper.scss
+++ b/src/styles/comonents/pickhelper.scss
@@ -1,82 +1,138 @@
 .pick-helper {
-    font-family: Roboto;
-    font-size: 14px;
-    background: #E0E0E0;
-    height: 100%;
-}
-input {
-    font-size: 22px;
-    outline: none;
-    border: none;
-    border-bottom: 1px solid black;
-    margin: 0 0 12px 0;
-}
-.heroes-list-wrapper {
-    position: relative;
-}
-.heroes-list {
-    display: flex;
-    flex-direction: column;
-    background: #757575;
-}
-.heroes-list img {
-    cursor: pointer;
-}
-.heroes {
-    display: flex;
-    width: 1100px;
-    flex-wrap: wrap;
-    margin: 12px 0 12px 0;
-}
-.ally_selected {
-    background: rgba(0, 255, 0, 0.5);
-}
-.enemy_selected {
-    background: rgba(255, 0, 0, 0.5);
-}
-.filtered {
-    opacity: 0.2;
-}
-.calculations .calc-block {
-    margin: 0 36px 0 0;
-    width: 248px;
-    height: 180px;
-}
-img {
-    width: 40px;
-    height: 40px;
-    padding: 4px;
+    background: $bg2;
+
+    .heroes-container {
+        position: relative;
+
+
+        .heroes-view {
+            display: flex;
+            flex-direction: column;
+            background: $bg3;
+
+
+            .heroes-subview {
+                display: flex;
+                width: 1100px;
+                flex-wrap: wrap;
+                margin: 12px 0 12px 0;
+
+                img {
+                    width: 40px;
+                    height: 40px;
+                    padding: 4px 4px 4px 4px;
+                }
+                img:hover {
+                    cursor: pointer;
+                    background: $bg-undefined;
+                }
+
+                img.ally_selected {
+                    background: $bg-positive;
+                }
+                img.enemy_selected {
+                    background: $bg-negative;
+                }
+                img.filtered {
+                    opacity: 0.2;
+                }
+            }
+        }
+    }
 }
 
-.find-controller {
-    display: flex;
-    flex-direction: row;
-}
 .calculations {
     margin: 12px 0 0 0;
     display: flex;
     flex-direction: row;
-    background: #E0E0E0;
+    background: $bg2;
+
+    .calc-block {
+        margin: 0 36px 0 0;
+        width: 248px;
+        height: 180px;
+
+        img {
+            padding: 4px 4px 4px 4px;
+            width: 40px;
+            height: 40px;
+        }
+
+        .calc-result {
+            height: 28px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+            img {
+                width: 24px;
+                height: 24px;
+            }
+        }
+
+        .team-winrate {
+            background: $bg-negative;
+            line-height: 50px;
+            text-align: center;
+            font-size: 18px;
+        }
+        .team-winrate.positive {
+            background: $bg-positive;
+        }
+        .team-winrate.empty {
+            background: transparent;
+        }
+
+        .toggler {
+            width: 24px;
+            height: 50px;
+            display: flex;
+            flex-direction: column;
+        
+            .mdi {
+                display: inline-block;
+                background: $secondary-color;
+                color: $bg1;
+        
+                width: 24px;
+                height: 25px;
+                line-height: 25px;
+                font-size: 24px;
+                border: none;
+        
+                &.active {
+                    background: $bg1;
+                    color: $secondary-color;
+                }
+        
+                &:hover {
+                    cursor: pointer;
+
+                    opacity: 0.75;
+                }
+            }
+        }
+
+        .clear-heroes {
+            display: inline-block;
+            background: $bg1;
+            color: $secondary-color;
+
+            width: 48px;
+            height: 50px;
+            line-height: 50px;
+            font-size: 48px;
+
+            &:hover {
+                cursor: pointer;
+                opacity: 0.75;
+            }
+        }
+    }
+    .find-controller {
+        display: flex;
+        flex-direction: row;
+    }
 }
-.best-hero {
-    height: 28px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-.best-hero img {
-    width: 24px;
-    height: 24px;
-}
-.best-hero div {
-    line-height: 28px;
-}
-.team-winrate {
-    background: rgba(255, 0, 0, 0.4);
-}
-.team-winrate.positive {
-    background: rgba(0, 255, 0, 0.4);
-}
-.team-winrate.empty {
-    background: transparent;
-}
+
+
