--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,5 +8,6 @@ $bg2: #e0e0e0;
 $bg3: #757575;
 $bg-header: #202124;
 
-$bg-positive: rgba(0, 255, 0, 0.5);
-$bg-negative: rgba(255, 0, 0, 0.5);
+$bg-positive: rgba(0, 255, 0, 0.4);
+$bg-negative: rgba(255, 0, 0, 0.4);
+$bg-undefined: rgba(0, 0, 255, 0.1);
