--- a/src/styles/comonents/sidebar.scss
+++ b/src/styles/comonents/sidebar.scss
@@ -10,7 +10,7 @@
     font-family: Roboto;
     text-align: center;
     cursor: pointer;
-    color: rgba(0, 0, 0, 0.7);
+    color: $bg1;
     position: relative;
 }
 .sidebar-item.active:after {
@@ -20,7 +20,7 @@
     bottom: 1px;
     width: 100%;
     height: 2px;
-    background: #607D8B;
+    background: $bg1;
 }
 .sidebar-item.active:before {
     content: "";
@@ -31,5 +31,5 @@
     height: 12px;
     border-radius: 50%;
     display: inline-block;
-    background: #607D8B;
+    background: $bg1;
 }
