--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,12 +28,13 @@ body {
     font-size: 16px;
     height: 50px;
     width: 100%;
-}
 
-.toggle-btn {
-    @extend .default-btn;
-    
-    background: rgba(0, 0, 0, 0.5);
+    &:hover {
+        opacity: 0.75;
+    }
+    &:active {
+        border: none;
+    }
 }
 
 .info-block {
