--- a/src/styles/comonents/error.scss
+++ b/src/styles/comonents/error.scss
@@ -1,14 +1,17 @@
 .error {
     position: fixed;
+    display: flex;
+
     top: 0;
     right: 0;
+
     width: 200px;
     height: 80px;
-    background: rgba(255, 0, 0, 0.5);
-    display: flex;
+
     justify-content: center;
     align-items: center;
-    font-family: Roboto;
+
     font-size: 20px;
-    color: #FFF;
+    background: $bg-negative;
+    color: $secondary-color;
 }
