--- a/src/styles/comonents/playerinfo.scss
+++ b/src/styles/comonents/playerinfo.scss
@@ -1,64 +1,90 @@
-.selected-account {
-    color: #fff;
-    text-align: center;
-    height: 50px;
-    width: 100%;
-    display: flex;
-    margin: 0 0 16px 0;
-}
-.account {
-    display: flex;
-    font-family: Roboto;
-    line-height: 50px;
-    font-size: 18px;
-    color: rgba(0, 0, 0, 0.8);
-    width: 250px;
-}
-.account img {
-    width: 50px;
-    height: 50px;
-}
-.selected-account input {
-    font-family: Roboto;
-    color: rgba(0, 0, 0, 0.8);
-    background: #E0E0E0;
-    height: 50px;
-    line-height: 50px;
-    font-size: 18px;
-    border: 1px solid #757575;
-    box-sizing: border-box;
-    padding: 0 0 0 8px;
-}
-.find-account {
-    font-family: Roboto;
-    background: #E0E0E0;
-    color: rgba(0, 0, 0, 0.8);
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    border: 1px solid #757575;
-    font-size: 18px;
-    height: 50px;
-    cursor: pointer;
-    width: 80px;
-}
-.player-games-info {
-    width: 100%;
-    text-align: center;
-    font-family: Roboto;
-    font-size: 16px;
-    border-spacing: 1px;
+.player-info {
+
+    .account-block {
+        display: flex;
+
+        height: 50px;
+        width: 100%;
+
+        color: $secondary-color;
+        text-align: center;
+        margin: 0 0 16px 0;
+
+        .account {
+            display: flex;
+
+            width: 250px;
+            margin: 0 0 0 16px;
+
+            line-height: 50px;
+            font-size: 18px;
+            color: $primary-color;
+
+            img {
+                width: 50px;
+                height: 50px;
+            }
+        }
+
+        input {
+            height: 50px;
+
+            box-sizing: border-box;
+
+            color: $primary-color;
+            background: $bg2;
+
+            line-height: 50px;
+            font-size: 18px;
+
+            border: 1px solid $bg3;
+
+            padding: 0 0 0 8px;
+        }
+        .find-account {
+            height: 50px;
+            width: 100px;
+
+            background: $bg2;
+            color: $primary-color;
+    
+            border: none;
+            text-align: center;
+            text-decoration: none;
+        
+            display: inline-block;
+            border: 1px solid $bg3;
+            font-size: 18px;
+
+            cursor: pointer;
+        }
+    }
+
+    .player-games-info {
+        width: 100%;
+        border-spacing: 1px;
+
+        .match {
+            height: 36px;
+            background: $bg-negative-low;
+
+            font-size: 16px;
+            text-align: center;
+
+            img {
+                width: 32px;
+                height: 32px;
+                padding: 2px 2px 2px 2px;
+            }
+            .default-btn {
+                height: 36px;
+            }
+        }
+
+        .match.win {
+            background: $bg-positive-low;
+        }
+    }
 }
 
-.match {
-    background: rgba(255, 0, 0, 0.2);
-    height: 38px;
-}
-.match.win {
-    background: rgba(0, 255, 0, 0.2); 
-}
-.match img {
-    display: block;
-    margin: auto;
-}
+
