--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,8 +6,13 @@ $secondary-color: #fff;
 $bg1: rgba(0, 0, 0, 0.9);
 $bg2: #e0e0e0;
 $bg3: #757575;
+$bg4: #cecece;
 $bg-header: #202124;
 
 $bg-positive: rgba(0, 255, 0, 0.4);
 $bg-negative: rgba(255, 0, 0, 0.4);
+$bg-neutral: rgba(0, 0, 255, 0.4);
 $bg-undefined: rgba(0, 0, 255, 0.1);
+
+$bg-positive-low: rgba(0, 255, 0, 0.2);
+$bg-negative-low: rgba(255, 0, 0, 0.2);
