[dev] add loaders

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@
 @import "./comonents/pickhelper.scss";
 @import "./comonents/playerinfo.scss";
 @import "./comonents/sidebar.scss";
+@import "./comonents//loading.scss";
 
 body {
     font-family: $main-font;
