--- a/src/styles/comonents/pickhelper.scss
+++ b/src/styles/comonents/pickhelper.scss
@@ -1,5 +1,7 @@
 .pick-helper {
     background: $bg2;
+    display: flex;
+    flex-wrap: wrap;
 
     .heroes-container {
         position: relative;
@@ -21,9 +23,11 @@
                     width: 40px;
                     height: 40px;
                     padding: 4px 4px 4px 4px;
+                    transition: all 0.2s ease-in-out;
                 }
                 img:hover {
                     cursor: pointer;
+                    transform: scale(1.1);
                     background: $bg-undefined;
                 }
 
@@ -42,7 +46,6 @@
 }
 
 .calculations {
-    margin: 12px 0 0 0;
     display: flex;
     flex-direction: row;
     background: $bg2;
