--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
 @import "./components/finder.scss";
 @import "./components/pickhelper.scss";
 @import "./components/loading.scss";
+@import "./components/live.scss";
 
 body {
     font-family: $main-font;
