--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -27,3 +27,15 @@
     width: 100;
     height: 100%;
 }
+.live-circle {
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 24px;
+    height: 24px;
+    background: $bg-negative;
+    border-radius: 50%;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
