--- a/src/styles/components/live.scss
+++ b/src/styles/components/live.scss
@@ -1,6 +1,12 @@
 .live {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.matches {
     background-color: $bg3;
-    width: 1060px;
+    width: 1000px;
 
     font-size: 24px;
 
@@ -30,7 +36,7 @@
         height: 36px;
     }
 
-    .copy {
+    .icons {
         margin-left: auto;
         
         .mdi {
@@ -48,6 +54,59 @@
 
                 opacity: 0.75;
             }
+        }
+    }
+}
+
+.team_info {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+
+    .team_info__header {
+        display: flex;
+        align-items: center;
+        font-weight: 800;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+
+        img {
+            height: 64px;
+        }
+    }
+
+    .team__heroes, .team__matches {
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+    }
+
+    .hero__info {
+        display: flex;
+        align-items: center;
+    }
+    
+    .team__match {
+        display: flex;
+        align-items: center;
+        background: $bg-negative;
+        justify-content: space-around;
+        height: 42px;
+
+        &.match__win {
+            background: $bg-positive;
+        }
+
+        .team__logo {
+            width: 60px;
+            display: flex;
+            justify-content: center;
+
+            img {
+                height: 32px;
+            }
+        }
+
+        .team__name {
+            width: 150px;
+            text-overflow: ellipsis;
         }
     }
 }
