add team finder

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@
 @import "./components/pickhelper.scss";
 @import "./components/loading.scss";
 @import "./components/live.scss";
+@import "./components/teaminfo.scss";
 
 body {
     font-family: $main-font;
