--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -28,6 +28,7 @@
     height: 100%;
 }
 .live-circle {
+    margin-left: 8px;
     margin-top: auto;
     margin-bottom: auto;
     width: 24px;
@@ -37,5 +38,43 @@
 
     &:hover {
         cursor: pointer;
+    }
+}
+
+.team-finder {
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    input {
+        padding-left: 6px;
+        height: 24px;
+        font-size: 16px;
+        -moz-box-shadow:inset 2px 2px 5px #888;
+        box-shadow:inset 2px 2px 5px #888;
+        border: 1px solid #b8b8b8;
+    }
+
+    .team-finder__suggested_team {
+        color: $secondary-color;
+    }
+
+    .mdi {
+        display: inline-block;
+        color: $secondary-color;
+        margin-left: 2px;
+
+        width: 27px;
+        height: 28px;
+        line-height: 25px;
+        font-size: 24px;
+        border: none;
+
+        &:hover {
+            cursor: pointer;
+
+            opacity: 0.75;
+        }
     }
 }
