--- a/src/styles/components/live.scss
+++ b/src/styles/components/live.scss
@@ -31,6 +31,20 @@
         }
     }
 
+    .team__logo {
+        width: 80px;
+    }
+
+    .team__name {
+        width: 140px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    .team__heroes {
+        width: 180px;
+    }
+
 
     img {
         height: 36px;
