--- a/src/styles/components/pickhelper.scss
+++ b/src/styles/components/pickhelper.scss
@@ -51,6 +51,7 @@
     background: $bg2;
 
     .calc-block {
+        position: relative;
         margin: 0 36px 0 0;
         width: 248px;
         height: 180px;
@@ -135,6 +136,19 @@
     .find-controller {
         display: flex;
         flex-direction: row;
+    }
+
+    .team__top {
+        position: absolute;
+        top: -50px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .team__name {
+            color: $secondary-color;
+        }
     }
 }
 
